KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md
+++ b/KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md
@@ -75,15 +75,15 @@
 		- กรณีที่มีการชำระเงินค่าขายสินค้าที่ส่งออกเป็นเงินสดด้วยสกุลเงินตราต่างประเทศ หรือสกุลเงินบาท ให้แนบหลักฐานการนำเงินเข้าประเทศ (Foreign Currency Declaration Form)ตามแบบของกรมศุลกากร โดยเจ้าหน้าที่ด่านศุลกากรเป็นผู้รับรอง และแนบสำเนาภาพถ่ายหนังสือเดินทางเข้าประเทศหรือสำเนาภาพถ่ายหลักฐานการผ่านแดนเข้ามาในประเทศของผู้เดินทาง พร้อมเอกสารนำเงินฝากเข้าบัญชีธนาคาร ระบุเลขที่บัญชีสินค้า
 
 	4. กรณีการขอรับเงินชดเชยค่าภาษีอากรสำหรับสินค้าที่ส่งออกทางอากาศยาน ให้ผู้ส่งของออกแนบสำเนาใบตราส่งสินค้าทางอากาศยาน (Air Waybill) ที่ระบุเลขที่บัญชีราคาสินค้าและเงื่อนไขการชำระค่าขนส่งของ โดยผู้ส่งของออกและตัวแทนบริษัทสายการบิน ลงลายมือชื่อและประทับตรารับรอง กรณีไม่สำแดงค่าขนส่งใน Air Waybill ให้แนบเอกสารการชำระค่าขนส่งของเพิ่มเติมจากเอกสารที่ต้องยื่นตามปกติ
-กรณีผู้ขอรับเงินชดเชยค่าภาษีอากรไม่ได้เป็นผู้ผลิตสินค้าที่ส่งออกและประสงค์จะโอนสิทธิในบัตรภาษีให้บุคคลอื่น และสินค้าที่ขอรับเงินชดเชยค่าภาษีอากรมีอัตราเงินชดเชยค่าภาษีอากร ตั้งแต่ร้อยละ 1.5 ขึ้นไปของราคาส่งออก ให้ยื่นใบกำกับภาษีหรือหลักฐานการซื้อขายอย่างอื่นที่ระบุผู้ซื้อและผู้ขายพร้อมสถานประกอบการของผู้ขาย ทั้งนี้ใบกำกับภาษีที่ยื่นประกอบชุดคำขอรับเงินชดเชยค่าภาษีอากร ต้องมีรายการดังต่อไปนี้
-คำว่า "ใบกำกับภาษี" ในที่ที่เห็นได้เด่นชัด
-ชื่อ ที่อยู่ และเลขประจำตัวผู้เสียภาษีอากรของผู้ประกอบการจดทะเบียนที่ออกใบกำกับภาษี
-หมายเลขลำดับของใบกำกับภาษีและหมายเลขลำดับของเล่ม (ถ้ามี) พร้อมวัน เดือน ปี ที่ออกใบกำกับภาษี
-ชื่อ ที่อยู่ ของผู้ซื้อสินค้า
-ชื่อ ชนิด ประเภท ปริมาณและมูลค่าของสินค้า
-จำนวนภาษีมูลค่าเพิ่มที่คำนวณจากมูลค่าของสินค้าโดยให้แยกออกจากมูลค่าสินค้าให้ชัดเจน
-เอกสารหลักฐานอื่น ๆ เพื่อประกอบการพิจารณาตามความจำเป็น
-กรณีขายสินค้าภายในประเทศซึ่งอยู่ในข่ายได้รับเงินชดเชยค่าภาษีอากร
+	5. กรณีผู้ขอรับเงินชดเชยค่าภาษีอากรไม่ได้เป็นผู้ผลิตสินค้าที่ส่งออกและประสงค์จะโอนสิทธิในบัตรภาษีให้บุคคลอื่น และสินค้าที่ขอรับเงินชดเชยค่าภาษีอากรมีอัตราเงินชดเชยค่าภาษีอากร ตั้งแต่ร้อยละ 1.5 ขึ้นไปของราคาส่งออก ให้ยื่นใบกำกับภาษีหรือหลักฐานการซื้อขายอย่างอื่นที่ระบุผู้ซื้อและผู้ขายพร้อมสถานประกอบการของผู้ขาย ทั้งนี้ใบกำกับภาษีที่ยื่นประกอบชุดคำขอรับเงินชดเชยค่าภาษีอากร ต้องมีรายการดังต่อไปนี้
+		- คำว่า "ใบกำกับภาษี" ในที่ที่เห็นได้เด่นชัด
+		- ชื่อ ที่อยู่ และเลขประจำตัวผู้เสียภาษีอากรของผู้ประกอบการจดทะเบียนที่ออกใบกำกับภาษี
+		- หมายเลขลำดับของใบกำกับภาษีและหมายเลขลำดับของเล่ม (ถ้ามี) พร้อมวัน เดือน ปี ที่ออกใบกำกับภาษี
+		- ชื่อ ที่อยู่ ของผู้ซื้อสินค้า
+		- ชื่อ ชนิด ประเภท ปริมาณและมูลค่าของสินค้า
+		- จำนวนภาษีมูลค่าเพิ่มที่คำนวณจากมูลค่าของสินค้าโดยให้แยกออกจากมูลค่าสินค้าให้ชัดเจน
+	6. เอกสารหลักฐานอื่น ๆ เพื่อประกอบการพิจารณาตามความจำเป็น
+2. กรณีขายสินค้าภายในประเทศซึ่งอยู่ในข่ายได้รับเงินชดเชยค่าภาษีอากร
 ผู้ที่ขายสินค้าภายในประเทศให้แก่ส่วนราชการหรือรัฐวิสาหกิจตามโครงการเงินกู้หรือเงินช่วยเหลือจากต่างประเทศ ซึ่งอยู่ในข่ายได้รับเงินชดเชยค่าภาษีอากรเช่นเดียวกับผู้ส่งสินค้าออก ให้ยื่นคำขอรับเงินชดเชยค่าภาษีอากร ตามแบบ กศก. 21/1 และให้ปฏิบัติเช่นเดียวกับกรณีผู้ส่งสินค้าออกไปยังต่างประเทศตามกฎหมายว่าด้วยศุลกากร โดยมีเอกสารเพิ่มเติม ดังนี้
 แบบแสดงรายละเอียดของสินค้าที่ขอรับเงินชดเชยค่าภาษีอากรตามแบบ กศก.21/1 ก ที่ลงลายมือชื่อและประทับตราบริษัท ห้าง ร้าน (ถ้ามี) โดยผู้มีอำนาจยื่นคำขอรับเงินชดเชยค่าภาษีอากร
 สำเนาสัญญาซื้อขาย (เฉพาะส่วนที่เกี่ยวกับสินค้าที่ขอรับเงินชดเชยค่าภาษีอากร) ถ้าสัญญาซื้อขายเป็นภาษาต่างประเทศให้แปลเป็นภาษาไทย และรับรองโดยผู้มีอำนาจลงลายมือชื่อ ชื่อ-สกุล ตำแหน่ง พร้อมประทับตราบริษัท ห้าง ร้าน (ถ้ามี) ไว้ด้วย
@@ -140,5 +140,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQwNjk5NjQwNl19
+eyJoaXN0b3J5IjpbLTU1NTAyMTU2NV19
 -->
