--- a/KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md
+++ b/KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md
@@ -84,11 +84,11 @@
 		- จำนวนภาษีมูลค่าเพิ่มที่คำนวณจากมูลค่าของสินค้าโดยให้แยกออกจากมูลค่าสินค้าให้ชัดเจน
 	6. เอกสารหลักฐานอื่น ๆ เพื่อประกอบการพิจารณาตามความจำเป็น
 2. กรณีขายสินค้าภายในประเทศซึ่งอยู่ในข่ายได้รับเงินชดเชยค่าภาษีอากร
-ผู้ที่ขายสินค้าภายในประเทศให้แก่ส่วนราชการหรือรัฐวิสาหกิจตามโครงการเงินกู้หรือเงินช่วยเหลือจากต่างประเทศ ซึ่งอยู่ในข่ายได้รับเงินชดเชยค่าภาษีอากรเช่นเดียวกับผู้ส่งสินค้าออก ให้ยื่นคำขอรับเงินชดเชยค่าภาษีอากร ตามแบบ กศก. 21/1 และให้ปฏิบัติเช่นเดียวกับกรณีผู้ส่งสินค้าออกไปยังต่างประเทศตามกฎหมายว่าด้วยศุลกากร โดยมีเอกสารเพิ่มเติม ดังนี้
-แบบแสดงรายละเอียดของสินค้าที่ขอรับเงินชดเชยค่าภาษีอากรตามแบบ กศก.21/1 ก ที่ลงลายมือชื่อและประทับตราบริษัท ห้าง ร้าน (ถ้ามี) โดยผู้มีอำนาจยื่นคำขอรับเงินชดเชยค่าภาษีอากร
-สำเนาสัญญาซื้อขาย (เฉพาะส่วนที่เกี่ยวกับสินค้าที่ขอรับเงินชดเชยค่าภาษีอากร) ถ้าสัญญาซื้อขายเป็นภาษาต่างประเทศให้แปลเป็นภาษาไทย และรับรองโดยผู้มีอำนาจลงลายมือชื่อ ชื่อ-สกุล ตำแหน่ง พร้อมประทับตราบริษัท ห้าง ร้าน (ถ้ามี) ไว้ด้วย
-สำเนาหนังสือรับรองสัญญาซื้อขายจากส่วนราชการ หรือรัฐวิสาหกิจ ว่าเป็นการซื้อขายสินค้าตามโครงการเงินกู้หรือเงินช่วยเหลือจากต่างประเทศ โดยเป็นการซื้อขายที่ผู้ขายได้รับการคัดเลือกในการประกวดราคานานาชาติหรือการสอบราคานานาชาติ
-หนังสือรับรองการตรวจรับสินค้า หรือสำเนาหนังสือตรวจรับสินค้าของคณะกรรมการตรวจรับคุณภาพและปริมาณสินค้าจากส่วนราชการ หรือรัฐวิสาหกิจ
+	1. ผู้ที่ขายสินค้าภายในประเทศให้แก่ส่วนราชการหรือรัฐวิสาหกิจตามโครงการเงินกู้หรือเงินช่วยเหลือจากต่างประเทศ ซึ่งอยู่ในข่ายได้รับเงินชดเชยค่าภาษีอากรเช่นเดียวกับผู้ส่งสินค้าออก ให้ยื่นคำขอรับเงินชดเชยค่าภาษีอากร ตามแบบ กศก. 21/1 และให้ปฏิบัติเช่นเดียวกับกรณีผู้ส่งสินค้าออกไปยังต่างประเทศตามกฎหมายว่าด้วยศุลกากร โดยมีเอกสารเพิ่มเติม ดังนี้
+		- แบบแสดงรายละเอียดของสินค้าที่ขอรับเงินชดเชยค่าภาษีอากรตามแบบ กศก.21/1 ก ที่ลงลายมือชื่อและประทับตราบริษัท ห้าง ร้าน (ถ้ามี) โดยผู้มีอำนาจยื่นคำขอรับเงินชดเชยค่าภาษีอากร
+	- สำเนาสัญญาซื้อขาย (เฉพาะส่วนที่เกี่ยวกับสินค้าที่ขอรับเงินชดเชยค่าภาษีอากร) ถ้าสัญญาซื้อขายเป็นภาษาต่างประเทศให้แปลเป็นภาษาไทย และรับรองโดยผู้มีอำนาจลงลายมือชื่อ ชื่อ-สกุล ตำแหน่ง พร้อมประทับตราบริษัท ห้าง ร้าน (ถ้ามี) ไว้ด้วย
+	- สำเนาหนังสือรับรองสัญญาซื้อขายจากส่วนราชการ หรือรัฐวิสาหกิจ ว่าเป็นการซื้อขายสินค้าตามโครงการเงินกู้หรือเงินช่วยเหลือจากต่างประเทศ โดยเป็นการซื้อขายที่ผู้ขายได้รับการคัดเลือกในการประกวดราคานานาชาติหรือการสอบราคานานาชาติ
+	- หนังสือรับรองการตรวจรับสินค้า หรือสำเนาหนังสือตรวจรับสินค้าของคณะกรรมการตรวจรับคุณภาพและปริมาณสินค้าจากส่วนราชการ หรือรัฐวิสาหกิจ
 สำเนาใบส่งสินค้าหรือสำเนาใบกำกับสินค้าซึ่งออกโดยผู้ผลิตสินค้า และสำเนาหลักฐานการรับเงินค่าขายสินค้าต้องสอดคล้องกัน โดยผู้ยื่นคำขอต้องลงลายมือชื่อและประทับตราบริษัท ห้าง ร้าน (ถ้ามี)
 ยื่นคำขอรับเงินชดเชยค่าภาษีอากรภายใน 1 ปี นับแต่วันที่คณะกรรมการตรวจรับคุณภาพและปริมาณตรวจรับสินค้า หรือภายใน 1 ปี นับแต่วันที่คณะกรรมการตรวจรับแต่ละงวด ให้นำสำเนาเอกสารพร้อมต้นฉบับ ตามข้อ (1) - (6) มายื่นโดยเฉพาะหนังสือของส่วนราชการ หรือรัฐวิสาหกิจ ต้องลงลายมือชื่อ - สกุล ตำแหน่ง โดยหัวหน้าส่วนราชการ หรือรัฐวิสาหกิจหรือผู้ที่ได้รับมอบหมาย เมื่อเจ้าหน้าที่ตรวจสอบเรียบร้อยแล้วจะคืนต้นฉบับไป
 ผู้ที่ขายสินค้าให้แก่องค์การระหว่างประเทศหรือหน่วยงานที่มีสิทธินำสินค้าเข้ามาในราชอาณาจักรโดยได้รับการยกเว้นอากรตามกฎหมายว่าด้วยพิกัดอัตราศุลกากร ซึ่งอยู่ในข่ายได้รับเงินชดเชย ค่าภาษีอากรเช่นเดียวกับผู้ส่งสินค้าออก ให้ยื่นคำขอรับเงินชดเชยค่าภาษี ตามแบบ กศก.21/1 และให้ปฏิบัติเช่นเดียวกับกรณีผู้ส่งสินค้าออกไปยังต่างประเทศตามกฎหมายว่าด้วยศุลกากร โดยมีเอกสารเพิ่มเติม ดังนี้
@@ -140,5 +140,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU1NTAyMTU2NV19
+eyJoaXN0b3J5IjpbMTUzNzgzMjAwXX0=
 -->
