KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md
+++ b/KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md
@@ -86,15 +86,16 @@
 2. กรณีขายสินค้าภายในประเทศซึ่งอยู่ในข่ายได้รับเงินชดเชยค่าภาษีอากร
 	1. ผู้ที่ขายสินค้าภายในประเทศให้แก่ส่วนราชการหรือรัฐวิสาหกิจตามโครงการเงินกู้หรือเงินช่วยเหลือจากต่างประเทศ ซึ่งอยู่ในข่ายได้รับเงินชดเชยค่าภาษีอากรเช่นเดียวกับผู้ส่งสินค้าออก ให้ยื่นคำขอรับเงินชดเชยค่าภาษีอากร ตามแบบ กศก. 21/1 และให้ปฏิบัติเช่นเดียวกับกรณีผู้ส่งสินค้าออกไปยังต่างประเทศตามกฎหมายว่าด้วยศุลกากร โดยมีเอกสารเพิ่มเติม ดังนี้
 		- แบบแสดงรายละเอียดของสินค้าที่ขอรับเงินชดเชยค่าภาษีอากรตามแบบ กศก.21/1 ก ที่ลงลายมือชื่อและประทับตราบริษัท ห้าง ร้าน (ถ้ามี) โดยผู้มีอำนาจยื่นคำขอรับเงินชดเชยค่าภาษีอากร
-	- สำเนาสัญญาซื้อขาย (เฉพาะส่วนที่เกี่ยวกับสินค้าที่ขอรับเงินชดเชยค่าภาษีอากร) ถ้าสัญญาซื้อขายเป็นภาษาต่างประเทศให้แปลเป็นภาษาไทย และรับรองโดยผู้มีอำนาจลงลายมือชื่อ ชื่อ-สกุล ตำแหน่ง พร้อมประทับตราบริษัท ห้าง ร้าน (ถ้ามี) ไว้ด้วย
-	- สำเนาหนังสือรับรองสัญญาซื้อขายจากส่วนราชการ หรือรัฐวิสาหกิจ ว่าเป็นการซื้อขายสินค้าตามโครงการเงินกู้หรือเงินช่วยเหลือจากต่างประเทศ โดยเป็นการซื้อขายที่ผู้ขายได้รับการคัดเลือกในการประกวดราคานานาชาติหรือการสอบราคานานาชาติ
-	- หนังสือรับรองการตรวจรับสินค้า หรือสำเนาหนังสือตรวจรับสินค้าของคณะกรรมการตรวจรับคุณภาพและปริมาณสินค้าจากส่วนราชการ หรือรัฐวิสาหกิจ
-	- สำเนาใบส่งสินค้าหรือสำเนาใบกำกับสินค้าซึ่งออกโดยผู้ผลิตสินค้า และสำเนาหลักฐานการรับเงินค่าขายสินค้าต้องสอดคล้องกัน โดยผู้ยื่นคำขอต้องลงลายมือชื่อและประทับตราบริษัท ห้าง ร้าน (ถ้ามี)
-	- ยื่นคำขอรับเงินชดเชยค่าภาษีอากรภายใน 1 ปี นับแต่วันที่คณะกรรมการตรวจรับคุณภาพและปริมาณตรวจรับสินค้า หรือภายใน 1 ปี นับแต่วันที่คณะกรรมการตรวจรับแต่ละงวด ให้นำสำเนาเอกสารพร้อมต้นฉบับ ตามข้อ (1) - (6) มายื่นโดยเฉพาะหนังสือของส่วนราชการ หรือรัฐวิสาหกิจ ต้องลงลายมือชื่อ - สกุล ตำแหน่ง โดยหัวหน้าส่วนราชการ หรือรัฐวิสาหกิจหรือผู้ที่ได้รับมอบหมาย เมื่อเจ้าหน้าที่ตรวจสอบเรียบร้อยแล้วจะคืนต้นฉบับไป
+		- สำเนาสัญญาซื้อขาย (เฉพาะส่วนที่เกี่ยวกับสินค้าที่ขอรับเงินชดเชยค่าภาษีอากร) ถ้าสัญญาซื้อขายเป็นภาษาต่างประเทศให้แปลเป็นภาษาไทย และรับรองโดยผู้มีอำนาจลงลายมือชื่อ ชื่อ-สกุล ตำแหน่ง พร้อมประทับตราบริษัท ห้าง ร้าน (ถ้ามี) ไว้ด้วย
+		- สำเนาหนังสือรับรองสัญญาซื้อขายจากส่วนราชการ หรือรัฐวิสาหกิจ ว่าเป็นการซื้อขายสินค้าตามโครงการเงินกู้หรือเงินช่วยเหลือจากต่างประเทศ โดยเป็นการซื้อขายที่ผู้ขายได้รับการคัดเลือกในการประกวดราคานานาชาติหรือการสอบราคานานาชาติ
+		- หนังสือรับรองการตรวจรับสินค้า หรือสำเนาหนังสือตรวจรับสินค้าของคณะกรรมการตรวจรับคุณภาพและปริมาณสินค้าจากส่วนราชการ หรือรัฐวิสาหกิจ
+		- สำเนาใบส่งสินค้าหรือสำเนาใบกำกับสินค้าซึ่งออกโดยผู้ผลิตสินค้า และสำเนาหลักฐานการรับเงินค่าขายสินค้าต้องสอดคล้องกัน โดยผู้ยื่นคำขอต้องลงลายมือชื่อและประทับตราบริษัท ห้าง ร้าน (ถ้ามี)
+		- ยื่นคำขอรับเงินชดเชยค่าภาษีอากรภายใน 1 ปี นับแต่วันที่คณะกรรมการตรวจรับคุณภาพและปริมาณตรวจรับสินค้า หรือภายใน 1 ปี นับแต่วันที่คณะกรรมการตรวจรับแต่ละงวด ให้นำสำเนาเอกสารพร้อมต้นฉบับ ตามข้อ (1) - (6) มายื่นโดยเฉพาะหนังสือของส่วนราชการ หรือรัฐวิสาหกิจ ต้องลงลายมือชื่อ - สกุล ตำแหน่ง โดยหัวหน้าส่วนราชการ หรือรัฐวิสาหกิจหรือผู้ที่ได้รับมอบหมาย เมื่อเจ้าหน้าที่ตรวจสอบเรียบร้อยแล้วจะคืนต้นฉบับไป
 	2. ผู้ที่ขายสินค้าให้แก่องค์การระหว่างประเทศหรือหน่วยงานที่มีสิทธินำสินค้าเข้ามาในราชอาณาจักรโดยได้รับการยกเว้นอากรตามกฎหมายว่าด้วยพิกัดอัตราศุลกากร ซึ่งอยู่ในข่ายได้รับเงินชดเชย ค่าภาษีอากรเช่นเดียวกับผู้ส่งสินค้าออก ให้ยื่นคำขอรับเงินชดเชยค่าภาษี ตามแบบ กศก.21/1 และให้ปฏิบัติเช่นเดียวกับกรณีผู้ส่งสินค้าออกไปยังต่างประเทศตามกฎหมายว่าด้วยศุลกากร โดยมีเอกสารเพิ่มเติม ดังนี้
-หลักฐานแสดงว่าผู้ซื้อเป็นหน่วยงานที่มีสิทธินำสินค้าเข้ามาในราชอาณาจักรโดยได้รับยกเว้นอากรตามกฎหมายว่าด้วยพิกัดอัตราศุลกากร และกรมศุลกากรอนุมัติแล้ว
-หนังสือรับรองการตรวจรับสินค้า หรือสำเนาเอกสารตรวจรับสินค้าจากผู้ซื้อ พร้อมนำต้นฉบับมาแสดงด้วย
-ยื่นคำขอรับเงินชดเชยค่าภาษีอากรภายใน 1 ปี นับแต่วันที่ผู้ซื้อตรวจรับสินค้า การจัดชุดคำขอรับเงินชดเชยค่าภาษีอากร ให้แยกชุดคำขอรับเงินชดเชยค่าภาษีอากรสำหรับใบขนสินค้าขาออกที่มีการส่งทางอากาศยานต่างหากจากชุดคำขอฯที่ส่งออกทางอื่น
+		- หลักฐานแสดงว่าผู้ซื้อเป็นหน่วยงานที่มีสิทธินำสินค้าเข้ามาในราชอาณาจักรโดยได้รับยกเว้นอากรตามกฎหมายว่าด้วยพิกัดอัตราศุลกากร และกรมศุลกากรอนุมัติแล้ว
+		- หนังสือรับรองการตรวจรับสินค้า หรือสำเนาเอกสารตรวจรับสินค้าจากผู้ซื้อ พร้อมนำต้นฉบับมาแสดงด้วย
+		- ยื่นคำขอรับเงินชดเชยค่าภาษีอากรภายใน 1 ปี นับแต่วันที่ผู้ซื้อตรวจรับสินค้า การจัดชุดคำขอรับเงินชดเชยค่าภาษีอากร ให้แยกชุดคำขอรับเงินชดเชยค่าภาษีอากรสำหรับใบขนสินค้าขาออกที่มีการส่งทางอากาศยานต่างหากจากชุดคำขอฯที่ส่งออกทางอื่น
+
 กรณีมีเหตุจำเป็นที่ผู้ยื่นชุดคำขอรับเงินชดเชยค่าภาษีอากรไม่สามารถดำเนินการนำเอกสารประกอบชุดคำขอรับเงินชดเชยค่าภาษีอากรมายื่นได้ครบถ้วน และสินค้าที่ขอรับเงินชดเชยค่าภาษีอากร จะครบกำหนดอายุ 1 ปี นับจากวันที่ส่งของออกถึงวันที่ยื่นเอกสาร ให้ผู้ยื่นชุดคำขอรับเงินชดเชยค่าภาษีอากร ยื่นคำร้องขอขยายระยะเวลายื่นเอกสารประกอบชุดคำขอรับเงินชดเชยค่าภาษีอากรตามแบบ กศก 159 โดยสามารถขอขยายระยะเวลาได้ภายใน 15 วันทำการ                                                                                                                                
 กรณีผู้ยื่นชุดคำขอรับเงินชดเชยค่าภาษีอากรที่ได้รับอนุญาตให้ขยายระยะเวลาแล้ว ไม่ปฏิบัติตามเงื่อนไขที่กำหนดไว้ หรือไม่สามารถดำเนินการได้ทันภายในกำหนดเวลาตามที่ขอไว้ ให้ถือว่า ผู้ขอรับเงินชดเชยค่าภาษีอากร ไม่ให้ความร่วมมือในการปฏิบัติงานของพนักงานเจ้าหน้าที่ตามนัยมาตรา 28 แห่งพระราชบัญญัติชดเชยค่าภาษีอากรสินค้าส่งออกที่ผลิตในราชอาณาจักร พ.ศ.2524 เจ้าหน้าที่ผู้ควบคุมคำร้องขอขยายเวลาฯจะเสนอหัวหน้าฝ่ายชดเชยอากร เพื่อพิจารณาอนุมัติให้ยกเลิกชุดคำขอรับเงินชดเชย ค่าภาษีอากรฉบับนั้น
 
@@ -140,5 +141,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTcxOTA0MzA2NCwxNTM3ODMyMDBdfQ==
+eyJoaXN0b3J5IjpbLTE0NTIxMDkxMzUsMTUzNzgzMjAwXX0=
 -->
