KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md
+++ b/KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md
@@ -1,8 +1,8 @@
 
-การชดเชยค่าภาษีอากร
+การชดเชยค่าภาษีอากรสำหรับสินค้าส่งออกที่ผลิตในราชอาณาจักร
 ===
 
-การชดเชยค่าภาษีอากรสำหรับสินค้าส่งออกที่ผลิตในราชอาณาจักร
+
 ## คำจำกัดความที่สำคัญในการชดเชยค่าภาษีอากร
 
 * คำว่า "สินค้า" หมายความว่า สินค้าที่ผลิตในราชอาณาจักร
@@ -94,9 +94,8 @@
 	2. ผู้ที่ขายสินค้าให้แก่องค์การระหว่างประเทศหรือหน่วยงานที่มีสิทธินำสินค้าเข้ามาในราชอาณาจักรโดยได้รับการยกเว้นอากรตามกฎหมายว่าด้วยพิกัดอัตราศุลกากร ซึ่งอยู่ในข่ายได้รับเงินชดเชย ค่าภาษีอากรเช่นเดียวกับผู้ส่งสินค้าออก ให้ยื่นคำขอรับเงินชดเชยค่าภาษี ตามแบบ กศก.21/1 และให้ปฏิบัติเช่นเดียวกับกรณีผู้ส่งสินค้าออกไปยังต่างประเทศตามกฎหมายว่าด้วยศุลกากร โดยมีเอกสารเพิ่มเติม ดังนี้
 		- หลักฐานแสดงว่าผู้ซื้อเป็นหน่วยงานที่มีสิทธินำสินค้าเข้ามาในราชอาณาจักรโดยได้รับยกเว้นอากรตามกฎหมายว่าด้วยพิกัดอัตราศุลกากร และกรมศุลกากรอนุมัติแล้ว
 		- หนังสือรับรองการตรวจรับสินค้า หรือสำเนาเอกสารตรวจรับสินค้าจากผู้ซื้อ พร้อมนำต้นฉบับมาแสดงด้วย
-		- ยื่นคำขอรับเงินชดเชยค่าภาษีอากรภายใน 1 ปี นับแต่วันที่ผู้ซื้อตรวจรับสินค้า การจัดชุดคำขอรับเงินชดเชยค่าภาษีอากร ให้แยกชุดคำขอรับเงินชดเชยค่าภาษีอากรสำหรับใบขนสินค้าขาออกที่มีการส่งทางอากาศยานต่างหากจากชุดคำขอฯที่ส่งออกทางอื่น
+		- ยื่นคำขอรับเงินชดเชยค่าภาษีอากรภายใน 1 ปี นับแต่วันที่ผู้ซื้อตรวจรับสินค้า การจัดชุดคำขอรับเงินชดเชยค่าภาษีอากร ให้แยกชุดคำขอรับเงินชดเชยค่าภาษีอากรสำหรับใบขนสินค้าขาออกที่มีการส่งทางอากาศยานต่างหากจากชุดคำขอฯที่ส่งออกทางอื่น กรณีมีเหตุจำเป็นที่ผู้ยื่นชุดคำขอรับเงินชดเชยค่าภาษีอากรไม่สามารถดำเนินการนำเอกสารประกอบชุดคำขอรับเงินชดเชยค่าภาษีอากรมายื่นได้ครบถ้วน และสินค้าที่ขอรับเงินชดเชยค่าภาษีอากร จะครบกำหนดอายุ 1 ปี นับจากวันที่ส่งของออกถึงวันที่ยื่นเอกสาร ให้ผู้ยื่นชุดคำขอรับเงินชดเชยค่าภาษีอากร ยื่นคำร้องขอขยายระยะเวลายื่นเอกสารประกอบชุดคำขอรับเงินชดเชยค่าภาษีอากรตามแบบ กศก 159 โดยสามารถขอขยายระยะเวลาได้ภายใน 15 วันทำการ                                                                                                                                
 
-กรณีมีเหตุจำเป็นที่ผู้ยื่นชุดคำขอรับเงินชดเชยค่าภาษีอากรไม่สามารถดำเนินการนำเอกสารประกอบชุดคำขอรับเงินชดเชยค่าภาษีอากรมายื่นได้ครบถ้วน และสินค้าที่ขอรับเงินชดเชยค่าภาษีอากร จะครบกำหนดอายุ 1 ปี นับจากวันที่ส่งของออกถึงวันที่ยื่นเอกสาร ให้ผู้ยื่นชุดคำขอรับเงินชดเชยค่าภาษีอากร ยื่นคำร้องขอขยายระยะเวลายื่นเอกสารประกอบชุดคำขอรับเงินชดเชยค่าภาษีอากรตามแบบ กศก 159 โดยสามารถขอขยายระยะเวลาได้ภายใน 15 วันทำการ                                                                                                                                
 กรณีผู้ยื่นชุดคำขอรับเงินชดเชยค่าภาษีอากรที่ได้รับอนุญาตให้ขยายระยะเวลาแล้ว ไม่ปฏิบัติตามเงื่อนไขที่กำหนดไว้ หรือไม่สามารถดำเนินการได้ทันภายในกำหนดเวลาตามที่ขอไว้ ให้ถือว่า ผู้ขอรับเงินชดเชยค่าภาษีอากร ไม่ให้ความร่วมมือในการปฏิบัติงานของพนักงานเจ้าหน้าที่ตามนัยมาตรา 28 แห่งพระราชบัญญัติชดเชยค่าภาษีอากรสินค้าส่งออกที่ผลิตในราชอาณาจักร พ.ศ.2524 เจ้าหน้าที่ผู้ควบคุมคำร้องขอขยายเวลาฯจะเสนอหัวหน้าฝ่ายชดเชยอากร เพื่อพิจารณาอนุมัติให้ยกเลิกชุดคำขอรับเงินชดเชย ค่าภาษีอากรฉบับนั้น
 
 
@@ -141,5 +140,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0NTIxMDkxMzUsMTUzNzgzMjAwXX0=
+eyJoaXN0b3J5IjpbMjY1MDQxMjcyLDE1Mzc4MzIwMF19
 -->
