KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md
+++ b/KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md
@@ -5,11 +5,11 @@
 
 ## คำจำกัดความที่สำคัญในการชดเชยค่าภาษีอากร
 
-* คำว่า "สินค้า" หมายความว่า สินค้าที่ผลิตในราชอาณาจักร
-* คำว่า "ผลิต" หมายความว่า ประกอบ แปรรูป แปรสภาพ หรือทำการอย่างใดอย่างหนึ่งให้มีขึ้น ซึ่งสินค้าไม่ว่าด้วยวิธีใดๆ
-* คำว่า "เงินชดเชย" หมายความว่า เงินที่จะจ่ายชดเชยค่าภาษีอากรซึ่งมีอยู่ในต้นทุนการผลิตสินค้าส่งออกให้แก่ผู้มีสิทธิได้รับเงินชดเชยในรูปของบัตรภาษีตามพระราชบัญญัติชดเชยค่าภาษีอากรสินค้าส่งออกที่ผลิตในราชอาณาจักร พ.ศ. 2524
-* คำว่า "อัตราเงินชดเชยค่าภาษีอากร" หมายความว่า อัตราเงินชดเชยสำหรับชนิดและประเภทสินค้าที่จะได้รับเงินชดเชยค่าภาษีอากรตามที่คณะกรรมการพิจารณาชดเชยค่าภาษีอากรสินค้าส่งออกที่ผลิตในราชอาณาจักรได้ประกาศในราชกิจจานุเบกษา
-* คำว่า "การส่งสินค้าออก" หมายความว่า การส่งของออกตามกฎหมายว่าด้วยศุลกากร รวมถึงการขายสินค้าภายในประเทศให้แก่ส่วนราชการหรือรัฐวิสาหกิจตามโครงการเงินกู้หรือเงินช่วยเหลือจากต่างประเทศ และการขายสินค้าให้แก่องค์การระหว่างประเทศหรือหน่วยงานที่มีสิทธินำสินค้าเข้ามาในราชอาณาจักรโดยได้รับการยกเว้นอากรตามกฎหมายว่าด้วยพิกัดอัตราศุลกากร
+* คำว่า **"สินค้า"** หมายความว่า สินค้าที่ผลิตในราชอาณาจักร
+* คำว่า **"ผลิต"** หมายความว่า ประกอบ แปรรูป แปรสภาพ หรือทำการอย่างใดอย่างหนึ่งให้มีขึ้น ซึ่งสินค้าไม่ว่าด้วยวิธีใดๆ
+* คำว่า **"เงินชดเชย"** หมายความว่า เงินที่จะจ่ายชดเชยค่าภาษีอากรซึ่งมีอยู่ในต้นทุนการผลิตสินค้าส่งออกให้แก่ผู้มีสิทธิได้รับเงินชดเชยในรูปของบัตรภาษีตามพระราชบัญญัติชดเชยค่าภาษีอากรสินค้าส่งออกที่ผลิตในราชอาณาจักร พ.ศ. 2524
+* คำว่า **"อัตราเงินชดเชยค่าภาษีอากร"** หมายความว่า อัตราเงินชดเชยสำหรับชนิดและประเภทสินค้าที่จะได้รับเงินชดเชยค่าภาษีอากรตามที่คณะกรรมการพิจารณาชดเชยค่าภาษีอากรสินค้าส่งออกที่ผลิตในราชอาณาจักรได้ประกาศในราชกิจจานุเบกษา
+* คำว่า **"การส่งสินค้าออก"** หมายความว่า การส่งของออกตามกฎหมายว่าด้วยศุลกากร รวมถึงการขายสินค้าภายในประเทศให้แก่ส่วนราชการหรือรัฐวิสาหกิจตามโครงการเงินกู้หรือเงินช่วยเหลือจากต่างประเทศ และการขายสินค้าให้แก่องค์การระหว่างประเทศหรือหน่วยงานที่มีสิทธินำสินค้าเข้ามาในราชอาณาจักรโดยได้รับการยกเว้นอากรตามกฎหมายว่าด้วยพิกัดอัตราศุลกากร
 
 ## ผู้มีสิทธิได้รับเงินชดเชยค่าภาษีอากร 
 
@@ -100,7 +100,8 @@
 
 
 บัตรภาษี
-บัตรภาษีมี 2 ชนิด คือ
+==
+## บัตรภาษีมี 2 ชนิด คือ
 บัตรภาษีชนิดกำหนดราคา
 ราคา 100,000 บาท
 ราคา 10,000 บาท
@@ -140,5 +141,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjY1MDQxMjcyLDE1Mzc4MzIwMF19
+eyJoaXN0b3J5IjpbNTM0NDUzNzIsMTUzNzgzMjAwXX0=
 -->
