KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md
+++ b/KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md
@@ -102,18 +102,19 @@
 บัตรภาษี
 ==
 ## บัตรภาษีมี 2 ชนิด คือ
-บัตรภาษีชนิดกำหนดราคา
-ราคา 100,000 บาท
-ราคา 10,000 บาท
-ราคา 1,000 บาท
-บัตรภาษีชนิดไม่กำหนดราคา จำนวนเงินต่ำกว่า 1,000 บาท บัตรภาษี มีอายุ 3 ปี นับตั้งแต่วันที่ออกบัตรภาษี
+1. บัตรภาษีชนิดกำหนดราคา
+	- ราคา 100,000 บาท
+	- ราคา 10,000 บาท
+	- ราคา 1,000 บาท
+2. บัตรภาษีชนิดไม่กำหนดราคา จำนวนเงินต่ำกว่า 1,000 บาท บัตรภาษี มีอายุ 3 ปี นับตั้งแต่วันที่ออกบัตรภาษี
 
-การโอนสิทธิในบัตรภาษี
+## การโอนสิทธิในบัตรภาษี
+
 ผู้มีสิทธิได้รับเงินชดเชยค่าภาษีอากร ที่ประสงค์จะโอนสิทธิในบัตรภาษีไปให้บุคคลอื่น ให้ปฏิบัติตามหลักเกณฑ์และวิธีการ ดังต่อไปนี้
-กรณีก่อนออกบัตรภาษี
-ให้ผู้มีสิทธิได้รับเงินชดเชยค่าภาษีอากร ที่ประสงค์จะโอนสิทธิในบัตรภาษี แสดงความจำนงในแบบคำขอรับเงินชดเชยค่าภาษีอากร โดยระบุชื่อผู้รับโอนลงในช่องว่างของบรรทัดที่มีข้อความ "ประสงค์จะโอนบัตรภาษีให้........................" หากไม่ประสงค์จะโอนก็ให้ระบุข้อความว่า "ไม่โอน" ยื่นต่อ ฝ่ายชดเชยอากร หรือยื่นคำร้องเปลี่ยนแปลงการโอนสิทธิในบัตรภาษี ก่อนออกบัตรภาษี
-ให้ผู้มีสิทธิได้รับเงินชดเชยค่าภาษีอากร ที่ประสงค์จะโอนสิทธิในบัตรภาษี ยื่นคำร้องขอรับโอนสิทธิในบัตรภาษีของผู้รับโอนตามแบบ กศก.22/1 พร้อมคำขอรับเงินชดเชยค่าภาษีอากร โดยระบุจำนวนเงินให้ตรงกับยอดเงินที่ขอชดเชยค่าภาษีอากร ทั้งนี้ต้องลงลายมือชื่อ ระบุชื่อ-สกุล และประทับตราบริษัท ห้าง ร้าน (ถ้ามี) ของผู้รับโอนและผู้โอนร่วมกัน
-กรณีหลังจากออกบัตรภาษีแล้ว จะโอนได้ในกรณีดังต่อไปนี้
+1. กรณีก่อนออกบัตรภาษี
+	* ให้ผู้มีสิทธิได้รับเงินชดเชยค่าภาษีอากร ที่ประสงค์จะโอนสิทธิในบัตรภาษี แสดงความจำนงในแบบคำขอรับเงินชดเชยค่าภาษีอากร โดยระบุชื่อผู้รับโอนลงในช่องว่างของบรรทัดที่มีข้อความ "ประสงค์จะโอนบัตรภาษีให้........................" หากไม่ประสงค์จะโอนก็ให้ระบุข้อความว่า "ไม่โอน" ยื่นต่อ ฝ่ายชดเชยอากร หรือยื่นคำร้องเปลี่ยนแปลงการโอนสิทธิในบัตรภาษี ก่อนออกบัตรภาษี
+	* ให้ผู้มีสิทธิได้รับเงินชดเชยค่าภาษีอากร ที่ประสงค์จะโอนสิทธิในบัตรภาษี ยื่นคำร้องขอรับโอนสิทธิในบัตรภาษีของผู้รับโอนตามแบบ กศก.22/1 พร้อมคำขอรับเงินชดเชยค่าภาษีอากร โดยระบุจำนวนเงินให้ตรงกับยอดเงินที่ขอชดเชยค่าภาษีอากร ทั้งนี้ต้องลงลายมือชื่อ ระบุชื่อ-สกุล และประทับตราบริษัท ห้าง ร้าน (ถ้ามี) ของผู้รับโอนและผู้โอนร่วมกัน
+2. กรณีหลังจากออกบัตรภาษีแล้ว จะโอนได้ในกรณีดังต่อไปนี้
 การโอนให้ทายาทผู้รับโอนกิจการของผู้มีชื่อในบัตรภาษีซึ่งถึงแก่ความตาย
 การโอนให้ผู้ซึ่งรับโอนกิจการของผู้มีชื่อในบัตรภาษีมาดำเนินการต่อไป
 การโอนให้แก่บริษัท หรือห้างหุ้นส่วนนิติบุคคลใหม่ อันเกิดจากการควบเข้ากันระหว่างนิติบุคคลผู้มีชื่อในบัตรภาษีและนิติบุคคลอื่น
@@ -141,5 +142,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTM0NDUzNzIsMTUzNzgzMjAwXX0=
+eyJoaXN0b3J5IjpbOTU2NDYwOTAzLDE1Mzc4MzIwMF19
 -->
