KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md
+++ b/KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md
@@ -115,18 +115,18 @@
 	* ให้ผู้มีสิทธิได้รับเงินชดเชยค่าภาษีอากร ที่ประสงค์จะโอนสิทธิในบัตรภาษี แสดงความจำนงในแบบคำขอรับเงินชดเชยค่าภาษีอากร โดยระบุชื่อผู้รับโอนลงในช่องว่างของบรรทัดที่มีข้อความ "ประสงค์จะโอนบัตรภาษีให้........................" หากไม่ประสงค์จะโอนก็ให้ระบุข้อความว่า "ไม่โอน" ยื่นต่อ ฝ่ายชดเชยอากร หรือยื่นคำร้องเปลี่ยนแปลงการโอนสิทธิในบัตรภาษี ก่อนออกบัตรภาษี
 	* ให้ผู้มีสิทธิได้รับเงินชดเชยค่าภาษีอากร ที่ประสงค์จะโอนสิทธิในบัตรภาษี ยื่นคำร้องขอรับโอนสิทธิในบัตรภาษีของผู้รับโอนตามแบบ กศก.22/1 พร้อมคำขอรับเงินชดเชยค่าภาษีอากร โดยระบุจำนวนเงินให้ตรงกับยอดเงินที่ขอชดเชยค่าภาษีอากร ทั้งนี้ต้องลงลายมือชื่อ ระบุชื่อ-สกุล และประทับตราบริษัท ห้าง ร้าน (ถ้ามี) ของผู้รับโอนและผู้โอนร่วมกัน
 2. กรณีหลังจากออกบัตรภาษีแล้ว จะโอนได้ในกรณีดังต่อไปนี้
-การโอนให้ทายาทผู้รับโอนกิจการของผู้มีชื่อในบัตรภาษีซึ่งถึงแก่ความตาย
-การโอนให้ผู้ซึ่งรับโอนกิจการของผู้มีชื่อในบัตรภาษีมาดำเนินการต่อไป
-การโอนให้แก่บริษัท หรือห้างหุ้นส่วนนิติบุคคลใหม่ อันเกิดจากการควบเข้ากันระหว่างนิติบุคคลผู้มีชื่อในบัตรภาษีและนิติบุคคลอื่น
-การโอนให้แก่บุคคลอื่นที่มีส่วนเกี่ยวข้องกับกิจการของผู้มีชื่อในบัตรภาษี ในกรณีนี้อธิบดีกรมศุลกากรจะอนุมัติได้ต่อเมื่อได้รับความเห็นชอบจากคณะกรรมการ สำหรับการโอนตาม (2.1) ผู้รับโอนต้องแนบบัตรภาษีของผู้มีชื่อในบัตรภาษีซึ่งถึงแก่ ความตายมาขอเปลี่ยนบัตรภาษีใหม่ ภายในอายุบัตรที่กำหนดไว้ในบัตรภาษีเดิม หรือภายใน 1 ปี นับแต่วันที่ผู้มีชื่อในบัตรภาษี ถึงแก่ความตาย แล้วแต่วันใดจะเป็นวันหลัง พร้อมคำร้อง
+	- การโอนให้ทายาทผู้รับโอนกิจการของผู้มีชื่อในบัตรภาษีซึ่งถึงแก่ความตาย
+	- การโอนให้ผู้ซึ่งรับโอนกิจการของผู้มีชื่อในบัตรภาษีมาดำเนินการต่อไป
+	- การโอนให้แก่บริษัท หรือห้างหุ้นส่วนนิติบุคคลใหม่ อันเกิดจากการควบเข้ากันระหว่างนิติบุคคลผู้มีชื่อในบัตรภาษีและนิติบุคคลอื่น
+	- การโอนให้แก่บุคคลอื่นที่มีส่วนเกี่ยวข้องกับกิจการของผู้มีชื่อในบัตรภาษี ในกรณีนี้อธิบดีกรมศุลกากรจะอนุมัติได้ต่อเมื่อได้รับความเห็นชอบจากคณะกรรมการ สำหรับการโอนตาม (2.1) ผู้รับโอนต้องแนบบัตรภาษีของผู้มีชื่อในบัตรภาษีซึ่งถึงแก่ ความตายมาขอเปลี่ยนบัตรภาษีใหม่ ภายในอายุบัตรที่กำหนดไว้ในบัตรภาษีเดิม หรือภายใน 1 ปี นับแต่วันที่ผู้มีชื่อในบัตรภาษี ถึงแก่ความตาย แล้วแต่วันใดจะเป็นวันหลัง พร้อมคำร้อง
 กรณีการโอนตาม (2.2) (2.3) และ (2.4) ผู้รับโอนต้องแนบบัตรภาษีของผู้โอนมาขอเปลี่ยนบัตรภาษีใหม่ภายในอายุบัตรที่กำหนดไว้ในบัตรภาษีเดิมพร้อมกับคำร้อง เว้นแต่ในกรณีที่อธิบดีกรมศุลกากรเห็นสมควรจะผ่อนผันให้นำบัตรภาษีมาขอเปลี่ยนบัตรภาษีใหม่ภายใน 60 วัน นับแต่วันที่บัตรภาษีหมดอายุก็ได้ บัตรภาษีที่ออกให้ใหม่มีอายุการใช้เท่ากับบัตรภาษีเดิม
 
-การขอรับบัตรภาษี
+## การขอรับบัตรภาษี
 เอกสารที่ต้องใช้ในการขอรับบัตรภาษี มีดังนี้
-ใบรับคำขอชดเชยค่าภาษีอากร (กศก.123)
-บัตรประจำตัวประชาชนหรือหนังสือเดินทางของผู้รับบัตรภาษี
-กรณีบุคคลผู้ขอรับบัตรภาษีเป็นผู้รับมอบอำนาจกระทำการแทนในการขอรับเงินชดเชยค่าภาษีอากรสำหรับสินค้าส่งออกจากผู้มีสิทธิได้รับเงินชดเชยค่าภาษีอากรต้องเป็นผู้ที่ได้ลงทะเบียนตามที่ระบุไว้ในฐานข้อมูลระบบทะเบียนผู้มาติดต่อของกรมศุลกากร
-ให้ผู้รับบัตรภาษี ลงลายมือชื่อรับบัตรภาษี ในแบบรายงานการรับ -จ่ายบัตรภาษี (รายงานที่ 4) และใบรับคำขอชดเชยค่าภาษีอากร (กศก.123)
+1. ใบรับคำขอชดเชยค่าภาษีอากร (กศก.123)
+2. บัตรประจำตัวประชาชนหรือหนังสือเดินทางของผู้รับบัตรภาษี
+3. กรณีบุคคลผู้ขอรับบัตรภาษีเป็นผู้รับมอบอำนาจกระทำการแทนในการขอรับเงินชดเชยค่าภาษีอากรสำหรับสินค้าส่งออกจากผู้มีสิทธิได้รับเงินชดเชยค่าภาษีอากรต้องเป็นผู้ที่ได้ลงทะเบียนตามที่ระบุไว้ในฐานข้อมูลระบบทะเบียนผู้มาติดต่อของกรมศุลกากร
+4. ให้ผู้รับบัตรภาษี ลงลายมือชื่อรับบัตรภาษี ในแบบรายงานการรับ -จ่ายบัตรภาษี (รายงานที่ 4) และใบรับคำขอชดเชยค่าภาษีอากร (กศก.123)
 
 การต่ออายุบัตรภาษี
 กรณีผู้มีชื่อในบัตรภาษีไม่สามารถนำบัตรภาษีไปใช้ประโยชน์ได้ภายในอายุ 3 ปี ให้ยื่นคำร้องขอต่ออายุบัตรภาษีตามแบบ กศก.24 ก่อนที่บัตรภาษีจะหมดอายุ บัตรภาษีที่ต่ออายุแล้ว มีอายุการใช้ได้คราวละ 3 ปี และจะขอต่ออายุได้ไม่เกิน 2 คราว การเปลี่ยนบัตรภาษี
@@ -142,5 +142,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTU2NDYwOTAzLDE1Mzc4MzIwMF19
+eyJoaXN0b3J5IjpbLTMzOTQwMTY5NywxNTM3ODMyMDBdfQ==
 -->
