KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md
+++ b/KnowledgeCenter/e-Customs/e-tax-incentive/ชดเชย.md
@@ -128,19 +128,28 @@
 3. กรณีบุคคลผู้ขอรับบัตรภาษีเป็นผู้รับมอบอำนาจกระทำการแทนในการขอรับเงินชดเชยค่าภาษีอากรสำหรับสินค้าส่งออกจากผู้มีสิทธิได้รับเงินชดเชยค่าภาษีอากรต้องเป็นผู้ที่ได้ลงทะเบียนตามที่ระบุไว้ในฐานข้อมูลระบบทะเบียนผู้มาติดต่อของกรมศุลกากร
 4. ให้ผู้รับบัตรภาษี ลงลายมือชื่อรับบัตรภาษี ในแบบรายงานการรับ -จ่ายบัตรภาษี (รายงานที่ 4) และใบรับคำขอชดเชยค่าภาษีอากร (กศก.123)
 
-การต่ออายุบัตรภาษี
+## การต่ออายุบัตรภาษี
+
 กรณีผู้มีชื่อในบัตรภาษีไม่สามารถนำบัตรภาษีไปใช้ประโยชน์ได้ภายในอายุ 3 ปี ให้ยื่นคำร้องขอต่ออายุบัตรภาษีตามแบบ กศก.24 ก่อนที่บัตรภาษีจะหมดอายุ บัตรภาษีที่ต่ออายุแล้ว มีอายุการใช้ได้คราวละ 3 ปี และจะขอต่ออายุได้ไม่เกิน 2 คราว การเปลี่ยนบัตรภาษี
 การขอเปลี่ยนบัตรภาษีจากชนิดราคาสูงเป็นชนิดราคาต่ำ จะทำการเปลี่ยนได้เมื่อผู้มีชื่อในบัตรภาษีไม่สามารถนำบัตรภาษีนั้นไปใช้ประโยชน์ได้จริง และได้เก็บบัตรภาษีไว้เป็นเวลาไม่น้อยกว่า 1 ปี นับแต่วันรับบัตรภาษี สามารถเปลี่ยนบัตรภาษีจากชนิดราคาสูงเป็นชนิดราคาต่ำได้ไม่เกินชนิดละ 50 ฉบับ ในกรณีบัตรภาษีจะหมดอายุ และผู้มีชื่อในบัตรภาษีมีความประสงค์จะขอเปลี่ยนบัตรภาษีจากชนิดราคาสูงเป็นราคาต่ำ ให้ยื่นความจำนงขอเปลี่ยนบัตรภาษีก่อน แล้วจึงขอต่ออายุบัตรภาษีภายหลัง แต่ต้องยื่นก่อนบัตรภาษีจะหมดอายุ
 
-การออกบัตรภาษีใหม่แทนบัตรภาษีที่ชำรุด สูญหายหรือถูกทำลาย
-กรณีที่บัตรภาษีชำรุด ผู้มีชื่อในบัตรภาษียื่นคำร้องขอให้ออกบัตรภาษีใหม่ ตามแบบ กศก. 25 พร้อมแนบบัตรภาษีที่ชำรุด
-กรณีที่บัตรภาษีสูญหายหรือถูกทำลาย ผู้มีชื่อในบัตรภาษียื่นคำร้องขอให้ออกบัตรภาษีใหม่ ตามแบบ กศก.25 พร้อมหลักฐานการแจ้งเอกสารหายจากสำนักงานตำรวจแห่งชาติ โดยมีรายละเอียด เลขบัตรภาษี มูลค่าตามบัตรภาษี อายุของบัตรภาษี จำนวนบัตรภาษี และหลักฐานอื่น (ถ้ามี) บัตรภาษีที่ออกให้ใหม่แทนบัตรภาษีที่ชำรุด สูญหายหรือถูกทำลาย มีอายุการใช้และอาจต่ออายุได้เท่าระยะเวลาที่เหลืออยู่ในบัตรภาษีเดิม
+## การออกบัตรภาษีใหม่แทนบัตรภาษีที่ชำรุด สูญหายหรือถูกทำลาย
 
-สินค้าส่งออกที่ถูกส่งกลับคืนหรือการส่งสินค้าคืน
+1. กรณีที่บัตรภาษีชำรุด ผู้มีชื่อในบัตรภาษียื่นคำร้องขอให้ออกบัตรภาษีใหม่ ตามแบบ กศก. 25 พร้อมแนบบัตรภาษีที่ชำรุด
+2. กรณีที่บัตรภาษีสูญหายหรือถูกทำลาย ผู้มีชื่อในบัตรภาษียื่นคำร้องขอให้ออกบัตรภาษีใหม่ ตามแบบ กศก.25 พร้อมหลักฐานการแจ้งเอกสารหายจากสำนักงานตำรวจแห่งชาติ โดยมีรายละเอียด เลขบัตรภาษี มูลค่าตามบัตรภาษี อายุของบัตรภาษี จำนวนบัตรภาษี และหลักฐานอื่น (ถ้ามี) บัตรภาษีที่ออกให้ใหม่แทนบัตรภาษีที่ชำรุด สูญหายหรือถูกทำลาย มีอายุการใช้และอาจต่ออายุได้เท่าระยะเวลาที่เหลืออยู่ในบัตรภาษีเดิม
+
+## สินค้าส่งออกที่ถูกส่งกลับคืนหรือการส่งสินค้าคืน
 ผู้ส่งของออกที่ได้รับเงินชดเชยค่าภาษีอากรไปแล้ว ให้ส่งคืนเงินชดเชยค่าภาษีอากรที่ได้รับไปแล้ว ภายใน 60 วัน นับแต่วันที่นำสินค้ากลับคืน หากผู้มีสิทธิได้รับเงินชดเชยค่าภาษีอากร มิได้คืนเงินชดเชยค่าภาษีอากรตามระยะเวลาที่กำหนดไว้ จะต้องเสียเงินเพิ่มในอัตราร้อยละ 2 ต่อเดือน เศษของเดือนให้นับเป็นหนึ่งเดือนของจำนวนเงินชดเชยค่าภาษีอากรที่ต้องคืน จนกว่าจะคืนเงินชดเชยค่าภาษีอากรครบถ้วน ทั้งนี้ผู้ส่งของออกสามารถชำระคืนเงินชดเชยค่าภาษีอากรที่ได้รับไปแล้วด้วยบัตรภาษี เช็คหรือดร๊าฟท์ ที่สั่งจ่ายเข้าบัญชีเงินฝากของกรมศุลกากร หรือเงินสด
 
 
-> Written with [StackEdit](https://stackedit.io/).
+ที่มา : [กรมศุลกากร]([http://www.customs.go.th/list_multi_tab.php?link=cont_xsimple.php&ini_menu=menu_tax_incentive&left_menu=menu_tax_incentive_160928_06_01&ini_tab=menu_tax_incentive_160928_06&ini_content=tax_incentive_160929_04&tab=menu_tax_incentive_160928_06_01&lang=th&root_left_menu=menu_tax_incentive_160928_06&left_menu=menu_tax_incentive_160928_06_01](http://www.customs.go.th/list_multi_tab.php?link=cont_xsimple.php&ini_menu=menu_tax_incentive&left_menu=menu_tax_incentive_160928_06_01&ini_tab=menu_tax_incentive_160928_06&ini_content=tax_incentive_160929_04&tab=menu_tax_incentive_160928_06_01&lang=th&root_left_menu=menu_tax_incentive_160928_06&left_menu=menu_tax_incentive_160928_06_01))
+
+วันที่ปรับปรุงล่าสุด : 24 มิถุนายน 2562 09:12:56
+
+**สอบถามข้อมูลเพิ่มเติมได้ที่ :** ส่วนชดเชยค่าภาษีอากร กองสิทธิประโยชน์ทางภาษีอากร (กสอ.)  
+กรมศุลกากร เลขที่ 1 ถ.สุนทรโกษา คลองเตย กทม. 10110  
+**หมายเลขโทรศัพท์ :** 02-667-7000 ต่อ 5799 หรือ 7661  
+**อีเมล์ :** 82000100@customs.go.th
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTMzOTQwMTY5NywxNTM3ODMyMDBdfQ==
+eyJoaXN0b3J5IjpbMTU5MTc2NTUyOCwxNTM3ODMyMDBdfQ==
 -->
