KnowledgeCenter/e-Customs/Knowledge/ของตกค้าง.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/Knowledge/ของตกค้าง.md
+++ b/KnowledgeCenter/e-Customs/Knowledge/ของตกค้าง.md
@@ -1,7 +1,48 @@
 
 
+“ของตกค้าง” หมายถึง ของที่อยู่ในอารักขาของศุลกากรในลักษณะใดลักษณะหนึ่ง ดังต่อไปนี้
+ (1) ของนําเข้าที่เป็นสินค้าอันตรายตามชนิด หรือประเภทที่กําหนด
+ตามมาตรา 5 (5) แห่งพระราชบัญญัติศุลกากร พ.ศ. 2560 ที่ผู้นําของเข้ายังมิได้นําของออกไปจาก
+เขตศุลกากร ภายใน 5 วัน สําหรับของที่ขนถ่ายข้างลํา (OVERSIDE) และภายใน 7 วันสําหรับกรณีอื่น
+นับแต่สินค้าอันตรายอยู่ในอารักขาของศุลกากร
+ (2) ของนําเข้าอื่นใดนอกจากข้อ (1) ท่ีอยู่ในอารักขาของศุลกากรเกิน 30 วัน
+นับแต่วันที่นําเข้า โดยไม่มีการยื่นใบขนสินค้าและไม่ได้เสียอากรหรือวางประกันค่าอากรที่พึงเรียกเก็บแก่
+ของนั้น ซึ่งอธิบดีมีหนังสือแจ้งไปยังตัวแทนของเรือที่นําของเข้ามา แต่ตัวแทนของเรือไม่ยอมดําเนินการ
+ให้ถูกต้อง ภายใน 15 วันนับแต่วันที่ได้รับหนังสือแจ้งจากอธิบดี
+ (3) ของนําเข้าอื่นใดนอกจากข้อ (1) ที่ยื่นใบขนสินค้าและเสียอากรหรือ
+วางประกันค่าอากรไว้ไม่ครบถ้วน และไม่ได้นําออกไปจากอารักขาของศุลกากร ภายในกําหนด 30 วัน
+นับแต่วันที่ได้รับหนังสือแจ้งจากอธิบดี
+ (4) ของสดของเสียได้ที่ยังมิได้รับมอบไปจากอารักขาของศุลกากร และ
+เห็นได้ชัดว่ามีลักษณะบูดเน่าหรือเสียแล้ว ตามมาตรา 109 แห่งพระราชบัญญัติศุลกากร พ.ศ. ๒5๖0
+
+3.3 หลักเกณฑ์ของการเป็นของตกค้าง
+ ของที่อยู่ในอารักขาของศุลกากรที่มีลักษณะอย่างใดอย่างหนึ่งดังต่อไปนี้
+เป็นของตกค้างตามมาตรา 107 แห่งพระราชบัญญัติศุลกากร พ.ศ. 2560
+ (1) ของนําเข้าที่เป็นสินค้าอันตรายตามชนิด หรือประเภทที่กําหนด
+ตามมาตรา 5 (5) แห่งพระราชบัญญัติศุลกากร พ.ศ. 2560 ซึ่งผู้นําของเข้ามิได้นําของออกไปจาก
+เขตศุลกากรภายใน 5 วัน สําหรับของที่ขนถ่ายข้างลํา (OVERSIDE) และภายใน 7 วันสําหรับกรณีอื่น
+นับแต่สินค้าอันตรายอยู่ในอารักขาของศุลกากร ถ้าพ้นกําหนดแล้วสินค้าอันตรายนั้นจะตกเป็นของตกค้าง
+โดยผลของกฎหมาย
+ (2) ของนําเข้าอื่นนอกจากข้อ (1) จะตกเป็นของตกค้าง มี 2 ประเภท
+ได้แก่
+ (2.1) ของที่อยู่ในอารักขาของศุลกากรเกินเวลา 30 วัน นับแต่วัน
+นําเข้าสําเร็จ จะตกเป็นของตกค้าง ต้องประกอบด้วยหลักเกณฑ์ดังต่อไปนี้
+ (2.1.1) เป็นของที่ไม่มีการยื่นใบขนสินค้าและไม่ได้เสียอากร
+หรือวางประกันค่าอากรที่พึงเรียกเก็บแก่ของนั้น
+ (2.1.2) อธิบดีได้มีหนังสือแจ้งไปยังตัวแทนของเรือที่นําของเข้ามา
+แต่ตัวแทนของเรือไม่ยอมดําเนินการให้ถูกต้อง ภายใน 15 วันนับแต่วันที่ได้รับหนังสือแจ้งจากอธิบดี
+ (2.2) ของนําเข้าที่ไม่ได้นําออกไปจากอารักขาของศุลกากร ภายใน
+กําหนด 30 วันนับแต่วันที่ได้รับหนังสือแจ้งจากอธิบดี จะตกเป็นของตกค้าง ต้องประกอบด้วยหลักเกณฑ์
+ดังต่อไปนี้
+ (2.2.๑) เป็นของที่มีการยื่นใบขนสินค้าโดยไม่ได้เสียอากรหรือ
+วางประกันอากร หรือ
+ (2.2.๒) เป็นของที่มีการยื่นใบขนสินค้าและเสียอากรหรือ
+วางประกันค่าอากรไว้ไม่ครบถ้วน
+
+
+
 
 > [Source : ](https://).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1OTkzNzE3NzFdfQ==
+eyJoaXN0b3J5IjpbLTc4NjgzNDQ4OSwtMTU5OTM3MTc3MV19
 -->
