KnowledgeCenter/e-Customs/Knowledge/ของตกค้าง.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/Knowledge/ของตกค้าง.md
+++ b/KnowledgeCenter/e-Customs/Knowledge/ของตกค้าง.md
@@ -1,15 +1,15 @@
+ของตกค้าง
+===
 
 
 “ของตกค้าง” หมายถึง ของที่อยู่ในอารักขาของศุลกากรในลักษณะใดลักษณะหนึ่ง ดังต่อไปนี้
- (1) ของนําเข้าที่เป็นสินค้าอันตรายตามชนิด หรือประเภทที่กําหนด
-ตามมาตรา 5 (5) แห่งพระราชบัญญัติศุลกากร พ.ศ. 2560 ที่ผู้นําของเข้ายังมิได้นําของออกไปจาก
-เขตศุลกากร ภายใน 5 วัน สําหรับของที่ขนถ่ายข้างลํา (OVERSIDE) และภายใน 7 วันสําหรับกรณีอื่น
-นับแต่สินค้าอันตรายอยู่ในอารักขาของศุลกากร
- (2) ของนําเข้าอื่นใดนอกจากข้อ (1) ท่ีอยู่ในอารักขาของศุลกากรเกิน 30 วัน
-นับแต่วันที่นําเข้า โดยไม่มีการยื่นใบขนสินค้าและไม่ได้เสียอากรหรือวางประกันค่าอากรที่พึงเรียกเก็บแก่
-ของนั้น ซึ่งอธิบดีมีหนังสือแจ้งไปยังตัวแทนของเรือที่นําของเข้ามา แต่ตัวแทนของเรือไม่ยอมดําเนินการ
-ให้ถูกต้อง ภายใน 15 วันนับแต่วันที่ได้รับหนังสือแจ้งจากอธิบดี
- (3) ของนําเข้าอื่นใดนอกจากข้อ (1) ที่ยื่นใบขนสินค้าและเสียอากรหรือ
+
+1. ของนําเข้าที่เป็นสินค้าอันตรายตามชนิด หรือประเภทที่กําหนด
+ตามมาตรา 5 (5) แห่งพระราชบัญญัติศุลกากร พ.ศ. 2560 ที่ผู้นําของเข้ายังมิได้นําของออกไปจากเขตศุลกากร ภายใน 5 วัน สําหรับของที่ขนถ่ายข้างลํา (OVERSIDE) และภายใน 7 วันสําหรับกรณีอื่นนับแต่สินค้าอันตรายอยู่ในอารักขาของศุลกากร
+
+2. ของนําเข้าอื่นใดนอกจากข้อ (1) ที่อยู่ในอารักขาของศุลกากรเกิน 30 วัน
+นับแต่วันที่นําเข้า โดยไม่มีการยื่นใบขนสินค้าและไม่ได้เสียอากรหรือวางประกันค่าอากรที่พึงเรียกเก็บแก่ของนั้น ซึ่งอธิบดีมีหนังสือแจ้งไปยังตัวแทนของเรือที่นําของเข้ามา แต่ตัวแทนของเรือไม่ยอมดําเนินการให้ถูกต้อง ภายใน 15 วันนับแต่วันที่ได้รับหนังสือแจ้งจากอธิบดี
+3. ของนําเข้าอื่นใดนอกจากข้อ (1) ที่ยื่นใบขนสินค้าและเสียอากรหรือ
 วางประกันค่าอากรไว้ไม่ครบถ้วน และไม่ได้นําออกไปจากอารักขาของศุลกากร ภายในกําหนด 30 วัน
 นับแต่วันที่ได้รับหนังสือแจ้งจากอธิบดี
  (4) ของสดของเสียได้ที่ยังมิได้รับมอบไปจากอารักขาของศุลกากร และ
@@ -44,5 +44,6 @@
 
 > [Source : ](https://).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc4NjgzNDQ4OSwtMTU5OTM3MTc3MV19
+eyJoaXN0b3J5IjpbLTEwNjQ1NTAwMDEsLTE1OTkzNzE3NzFdfQ
+==
 -->
