--- a/KnowledgeCenter/e-Customs/Knowledge/ของตกค้าง.md
+++ b/KnowledgeCenter/e-Customs/Knowledge/ของตกค้าง.md
@@ -10,12 +10,11 @@
 3. ของนําเข้าอื่นใดนอกจากข้อ (1) ที่ยื่นใบขนสินค้าและเสียอากรหรือ วางประกันค่าอากรไว้ไม่ครบถ้วน และไม่ได้นําออกไปจากอารักขาของศุลกากร ภายในกําหนด 30 วัน นับแต่วันที่ได้รับหนังสือแจ้งจากอธิบดี
 4. ของสดของเสียได้ที่ยังมิได้รับมอบไปจากอารักขาของศุลกากร และเห็นได้ชัดว่ามีลักษณะบูดเน่า หรือเสียแล้ว ตามมาตรา 109 แห่งพระราชบัญญัติศุลกากร พ.ศ. 2560
 
-3.3 หลักเกณฑ์ของการเป็นของตกค้าง
- ของที่อยู่ในอารักขาของศุลกากรที่มีลักษณะอย่างใดอย่างหนึ่งดังต่อไปนี้
-เป็นของตกค้างตามมาตรา 107 แห่งพระราชบัญญัติศุลกากร พ.ศ. 2560
- (1) ของนําเข้าที่เป็นสินค้าอันตรายตามชนิด หรือประเภทที่กําหนด
-ตามมาตรา 5 (5) แห่งพระราชบัญญัติศุลกากร พ.ศ. 2560 ซึ่งผู้นําของเข้ามิได้นําของออกไปจาก
-เขตศุลกากรภายใน 5 วัน สําหรับของที่ขนถ่ายข้างลํา (OVERSIDE) และภายใน 7 วันสําหรับกรณีอื่น
+## หลักเกณฑ์ของการเป็นของตกค้าง  
+
+ของที่อยู่ในอารักขาของศุลกากรที่มีลักษณะอย่างใดอย่างหนึ่งดังต่อไปนี้ เป็นของตกค้างตามมาตรา 107 แห่งพระราชบัญญัติศุลกากร พ.ศ. 2560
+
+1. ของนําเข้าที่เป็นสินค้าอันตรายตามชนิด หรือประเภทที่กําหนด ตามมาตรา 5 (5) แห่งพระราชบัญญัติศุลกากร พ.ศ. 2560 ซึ่งผู้นําของเข้ามิได้นําของออกไปจากเขตศุลกากรภายใน 5 วัน สําหรับของที่ขนถ่ายข้างลํา (OVERSIDE) และภายใน 7 วันสําหรับกรณีอื่น
 นับแต่สินค้าอันตรายอยู่ในอารักขาของศุลกากร ถ้าพ้นกําหนดแล้วสินค้าอันตรายนั้นจะตกเป็นของตกค้าง
 โดยผลของกฎหมาย
  (2) ของนําเข้าอื่นนอกจากข้อ (1) จะตกเป็นของตกค้าง มี 2 ประเภท
@@ -39,6 +38,6 @@
 
 > [Source : ](https://).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzNDQyMDYxMjYsLTE1OTkzNzE3NzFdfQ
-==
+eyJoaXN0b3J5IjpbNDI1MTYxMTM1LC0xMzQ0MjA2MTI2LC0xNT
+k5MzcxNzcxXX0=
 -->
