--- a/KnowledgeCenter/e-Customs/Knowledge/ของตกค้าง.md
+++ b/KnowledgeCenter/e-Customs/Knowledge/ของตกค้าง.md
@@ -14,18 +14,12 @@
 
 ของที่อยู่ในอารักขาของศุลกากรที่มีลักษณะอย่างใดอย่างหนึ่งดังต่อไปนี้ เป็นของตกค้างตามมาตรา 107 แห่งพระราชบัญญัติศุลกากร พ.ศ. 2560
 
-1. ของนําเข้าที่เป็นสินค้าอันตรายตามชนิด หรือประเภทที่กําหนด ตามมาตรา 5 (5) แห่งพระราชบัญญัติศุลกากร พ.ศ. 2560 ซึ่งผู้นําของเข้ามิได้นําของออกไปจากเขตศุลกากรภายใน 5 วัน สําหรับของที่ขนถ่ายข้างลํา (OVERSIDE) และภายใน 7 วันสําหรับกรณีอื่น
-นับแต่สินค้าอันตรายอยู่ในอารักขาของศุลกากร ถ้าพ้นกําหนดแล้วสินค้าอันตรายนั้นจะตกเป็นของตกค้าง
-โดยผลของกฎหมาย
- (2) ของนําเข้าอื่นนอกจากข้อ (1) จะตกเป็นของตกค้าง มี 2 ประเภท
-ได้แก่
- (2.1) ของที่อยู่ในอารักขาของศุลกากรเกินเวลา 30 วัน นับแต่วัน
-นําเข้าสําเร็จ จะตกเป็นของตกค้าง ต้องประกอบด้วยหลักเกณฑ์ดังต่อไปนี้
- (2.1.1) เป็นของที่ไม่มีการยื่นใบขนสินค้าและไม่ได้เสียอากร
-หรือวางประกันค่าอากรที่พึงเรียกเก็บแก่ของนั้น
- (2.1.2) อธิบดีได้มีหนังสือแจ้งไปยังตัวแทนของเรือที่นําของเข้ามา
-แต่ตัวแทนของเรือไม่ยอมดําเนินการให้ถูกต้อง ภายใน 15 วันนับแต่วันที่ได้รับหนังสือแจ้งจากอธิบดี
- (2.2) ของนําเข้าที่ไม่ได้นําออกไปจากอารักขาของศุลกากร ภายใน
+1. ของนําเข้าที่เป็นสินค้าอันตรายตามชนิด หรือประเภทที่กําหนด ตามมาตรา 5 (5) แห่งพระราชบัญญัติศุลกากร พ.ศ. 2560 ซึ่งผู้นําของเข้ามิได้นําของออกไปจากเขตศุลกากรภายใน 5 วัน สําหรับของที่ขนถ่ายข้างลํา (OVERSIDE) และภายใน 7 วันสําหรับกรณีอื่น นับแต่สินค้าอันตรายอยู่ในอารักขาของศุลกากร ถ้าพ้นกําหนดแล้วสินค้าอันตรายนั้นจะตกเป็นของตกค้างโดยผลของกฎหมาย
+2. ของนําเข้าอื่นนอกจากข้อ (1) จะตกเป็นของตกค้าง มี 2 ประเภทได้แก่
+	-	ของที่อยู่ในอารักขาของศุลกากรเกินเวลา 30 วัน นับแต่วันนําเข้าสําเร็จ จะตกเป็นของตกค้าง ต้องประกอบด้วยหลักเกณฑ์ดังต่อไปนี้
+		 - เป็นของที่ไม่มีการยื่นใบขนสินค้าและไม่ได้เสียอากร หรือวางประกันค่าอากรที่พึงเรียกเก็บแก่ของนั้น
+		 - อธิบดีได้มีหนังสือแจ้งไปยังตัวแทนของเรือที่นําของเข้ามา แต่ตัวแทนของเรือไม่ยอมดําเนินการให้ถูกต้อง ภายใน 15 วันนับแต่วันที่ได้รับหนังสือแจ้งจากอธิบดี
+	-	ของนําเข้าที่ไม่ได้นําออกไปจากอารักขาของศุลกากร ภายใน
 กําหนด 30 วันนับแต่วันที่ได้รับหนังสือแจ้งจากอธิบดี จะตกเป็นของตกค้าง ต้องประกอบด้วยหลักเกณฑ์
 ดังต่อไปนี้
  (2.2.๑) เป็นของที่มีการยื่นใบขนสินค้าโดยไม่ได้เสียอากรหรือ
@@ -38,6 +32,6 @@
 
 > [Source : ](https://).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDI1MTYxMTM1LC0xMzQ0MjA2MTI2LC0xNT
+eyJoaXN0b3J5IjpbMTE5NTczMjAwLC0xMzQ0MjA2MTI2LC0xNT
 k5MzcxNzcxXX0=
 -->
