KnowledgeCenter/e-Customs/Knowledge/ของตกค้าง.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/Knowledge/ของตกค้าง.md
+++ b/KnowledgeCenter/e-Customs/Knowledge/ของตกค้าง.md
@@ -19,19 +19,15 @@
 	-	ของที่อยู่ในอารักขาของศุลกากรเกินเวลา 30 วัน นับแต่วันนําเข้าสําเร็จ จะตกเป็นของตกค้าง ต้องประกอบด้วยหลักเกณฑ์ดังต่อไปนี้
 		 - เป็นของที่ไม่มีการยื่นใบขนสินค้าและไม่ได้เสียอากร หรือวางประกันค่าอากรที่พึงเรียกเก็บแก่ของนั้น
 		 - อธิบดีได้มีหนังสือแจ้งไปยังตัวแทนของเรือที่นําของเข้ามา แต่ตัวแทนของเรือไม่ยอมดําเนินการให้ถูกต้อง ภายใน 15 วันนับแต่วันที่ได้รับหนังสือแจ้งจากอธิบดี
-	-	ของนําเข้าที่ไม่ได้นําออกไปจากอารักขาของศุลกากร ภายใน
-กําหนด 30 วันนับแต่วันที่ได้รับหนังสือแจ้งจากอธิบดี จะตกเป็นของตกค้าง ต้องประกอบด้วยหลักเกณฑ์
-ดังต่อไปนี้
- (2.2.๑) เป็นของที่มีการยื่นใบขนสินค้าโดยไม่ได้เสียอากรหรือ
-วางประกันอากร หรือ
- (2.2.๒) เป็นของที่มีการยื่นใบขนสินค้าและเสียอากรหรือ
-วางประกันค่าอากรไว้ไม่ครบถ้วน
+	-	ของนําเข้าที่ไม่ได้นําออกไปจากอารักขาของศุลกากร ภายในกําหนด 30 วันนับแต่วันที่ได้รับหนังสือแจ้งจากอธิบดี จะตกเป็นของตกค้าง ต้องประกอบด้วยหลักเกณฑ์ดังต่อไปนี้
+		- เป็นของที่มีการยื่นใบขนสินค้าโดยไม่ได้เสียอากรหรือวางประกันอากร หรือ
+		- เป็นของที่มีการยื่นใบขนสินค้าและเสียอากรหรือ วางประกันค่าอากรไว้ไม่ครบถ้วน
 
 
 
 
 > [Source : ](https://).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTE5NTczMjAwLC0xMzQ0MjA2MTI2LC0xNT
+eyJoaXN0b3J5IjpbNDEyOTg5NDczLC0xMzQ0MjA2MTI2LC0xNT
 k5MzcxNzcxXX0=
 -->
